# prompt-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
prompt_eval/: __init__.py  reporter.py  runner.py  template.py
tests/: test_judges.py  test_reporter.py  test_runner.py  test_template.py
